--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -116,6 +116,7 @@
     margin: -10px 10px;
     z-index: 1000;
     background-color: white;
+    border-radius: 10px;
 }
 
 .form-content input {
@@ -126,6 +127,7 @@
     border-radius: 5px;
     font-size: 20px;
     height: 25px;
+    background-color: rgba(255, 203, 61,.2);
 }
 
 .form-button {
@@ -146,11 +148,15 @@
 }
 
 .invalid, .invalid:focus {
-    border : 1px solid red !important;
+    border : 2px solid red !important;
+    outline-color: red !important;
+    outline-width: 10px;
 }
 
 .valid, .valid:focus {
-    border : 1px solid green !important;
+    border : 2px solid green !important;
+    outline-color: green !important;
+    outline-width: 10px;
 }
 
 /* Footer */
@@ -161,4 +167,10 @@
     text-align: center;
     background-color: rgb(255, 199, 126);
     width: 100%;
+}
+
+/* Registeration */
+
+.reg-heading {
+    margin-bottom: 30px;
 }
