--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -174,3 +174,16 @@
 .reg-heading {
     margin-bottom: 30px;
 }
+
+.error-msg {
+    margin-top: -30px;
+    display: inline-block;
+    color: red;
+}
+
+.error-msg-muted {
+    margin-top: -20px;
+    color: red;
+    text-align: center;
+}
+
