--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -27,6 +27,11 @@
     margin-left: 10px;
 }
 
+.brand a{
+    text-decoration: none;
+    color: black;
+}
+
 .nav {
     display: flex;
     justify-content: space-between;
@@ -185,6 +190,8 @@
     margin-top: -20px;
     color: red;
     text-align: center;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .form-footer {
@@ -221,4 +228,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    margin: 20px auto;
+}
+
+.button-container > * {
+    margin: 10px;
 }
