--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -346,10 +346,12 @@
     color: #000;
     font-size: 25px;
     cursor: pointer;
+    border: 1px solid black;
 }
 
 .gray-button:hover {
     background-color: #9f9f9f;
+    box-shadow: #9f9f9f 0 2px 5px 0, #9f9f9f 0 3px 10px 0;
 }
 
 .button-justifier {
@@ -366,6 +368,94 @@
     border-spacing: 10px;
     background-color: #FADCB6;
 }
- .proj-table th, .proj-table td {
+
+.proj-table th, .proj-table td {
+    padding: 12px;
+}
+
+.proj-table th {
+    border: 2px solid black;
+}
+
+.proj-table tr > td:first-child {
+    font-weight: bold;
+}
+
+.proj-table tr > td:first-child::before {
+    content: '#';
+}
+
+/* Project Modal Styling */
+
+.modal-container {
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100vw;
+    height: 100vh;
+    z-index: 99;
+    top: 0;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.proj-modal {
+    width: 35%;
+    margin: 20px auto;
+}
+
+.proj-modal-header {
+    background-color: rgb(255, 199, 126);
+    border: 1px solid black;
+    border-radius: 25px 25px 0 0;
+}
+
+.proj-modal-header h2 {
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+}
+
+.proj-modal-body {
+    height: 250px;
+    border: 1px solid black;
+}
+
+.proj-modal-footer {
+    border: 1px solid black;
+    background-color: rgb(255, 199, 126);
+    height: 60px;
+    border-radius: 0 0 15px 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-button {
+    cursor: pointer;
+    background-color: rgb(223, 223, 223);
+    border: 0px;
+    font-size: 20px;
     padding: 10px;
- }
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+.proj-modal-body {
+    background-color: white;
+}
+
+.close-btn-container {
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px;
+    margin-bottom: -30px;
+}
+
+.close-btn-container:hover {
+    cursor: pointer;
+}
+
+.close-btn {
+    font-size: 20px;
+}
