--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -10,6 +10,28 @@
     }
 }
 
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideOut {
+    from {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+}
+
 .navbar {
     display: flex;
     background-color: rgb(255, 199, 126);
@@ -124,7 +146,7 @@
     border-radius: 10px;
 }
 
-.form-content input {
+.form-content input, .form-content textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 30px;
@@ -133,6 +155,12 @@
     font-size: 20px;
     height: 25px;
     background-color: rgba(255, 203, 61,.2);
+}
+
+.form-content textarea {
+    height: 100px;
+    resize: none;
+    width: 100%;
 }
 
 .form-button {
@@ -397,10 +425,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: opacity 0.1, visibility 0.1s;
 }
 
 .proj-modal {
-    width: 35%;
+    width: 50%;
     margin: 20px auto;
 }
 
@@ -414,10 +443,10 @@
     width: 100%;
     display: inline-block;
     text-align: center;
+    margin-top: -30px;
 }
 
 .proj-modal-body {
-    height: 250px;
     border: 1px solid black;
 }
 
@@ -441,6 +470,11 @@
     border: 1px solid black;
 }
 
+.add-button:hover {
+    background-color: rgb(250, 250, 250);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
+}
+
 .proj-modal-body {
     background-color: white;
 }
@@ -449,7 +483,7 @@
     display: flex;
     justify-content: flex-end;
     margin: 20px;
-    margin-bottom: -30px;
+    margin-bottom: 0;
 }
 
 .close-btn-container:hover {
@@ -457,5 +491,29 @@
 }
 
 .close-btn {
-    font-size: 20px;
+    font-size: 30px;
+}
+
+.show {
+    opacity: 1;
+    visibility: visible;
+    animation: slideIn 0.5s;
+}
+
+.hide {
+    opacity: 0;
+    visibility: hidden;
+    animation: slideOut 0.5s;
+}
+
+.proj-content input, .proj-content, .proj-content textarea {
+    width: 90%;
+}
+
+.proj-content{
+    justify-content: center;
+}
+
+.proj-form {
+    width: 100%;
 }
