--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Odor+Mean+Chey&display=swap');
+
 @keyframes gradientAnimation {
     0% {
         background-position: 0% 50%;
@@ -413,11 +415,14 @@
     content: '#';
 }
 
+.proj-table tr td:last-of-type {
+    font-weight: 700;
+}
 /* Project Modal Styling */
 
 .modal-container {
     background-color: rgba(0, 0, 0, 0.8);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: 99;
     top: 0;
@@ -431,6 +436,7 @@
 .proj-modal {
     width: 50%;
     margin: 20px auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 15px 15px;
 }
 
 .proj-modal-header {
@@ -448,6 +454,8 @@
 
 .proj-modal-body {
     border: 1px solid black;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 .proj-modal-footer {
@@ -508,12 +516,36 @@
 
 .proj-content input, .proj-content, .proj-content textarea {
     width: 90%;
+    margin: 10px auto;
 }
 
 .proj-content{
     justify-content: center;
+    font-family: "Odor Mean Chey", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .proj-form {
     width: 100%;
+}
+
+.proj-content label {
+    margin: 10px 30px -20px;
+}
+
+.proj-content select {
+    width: 92%;
+    margin: 10px auto;
+    height: 45px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 20px;
+    background-color: rgba(255, 203, 61,.2);
+}
+
+select > option {
+    font-size: 20px;
+    color: #393503;
 }
