--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -590,7 +590,6 @@ select > option {
     font-size: 30px;
     margin-top: 10px;
     margin-left: 15px;
-    flex: 0.3;
 }
 
 .project-description {
@@ -600,16 +599,16 @@ select > option {
     margin-right: 15px;
     text-align: left;
     color: #000;
-    flex: 0.5;
+    flex: 1;
 }
 
 .proj-footer {
     display: flex;
     justify-content: space-between;
     border-top: 2px solid black;
-    flex: 0.2;
     padding: 5px;
     background-color: #CD8D6B;
+    font-size: 20px;
 }
 
 .status-container {
@@ -617,4 +616,60 @@ select > option {
     height: 100%;
     min-height: 300px;
     width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: 1px solid black
+}
+
+.status-hd {
+    font-size: 30px;
+    text-align: center;
+}
+
+.circular-progress-bar {
+    width: 100px;
+    height: 100px;
+}
+
+.status-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 25px;
+}
+
+.status-info {
+    text-align: center;
+    color: #AF4261;
+    font-size: 22px;
+    font-weight: 1000;
+    margin: 0;
+}
+
+.status-text {
+    color: #F3EC78;
+    font-size: 22px;
+    -webkit-text-stroke: #000 1px;
+    margin: 0;
+    color: #f6ff00;
+}
+
+.small-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
+
+.edit-button-container > * {
+    height: 25px;
+    width: 25px;
+    color: #CD8D6B;
+}
+
+.edit-button-container > *:hover {
+    cursor: pointer;
+    color: rgb(216, 104, 43);
 }
