--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -705,6 +705,8 @@ select > option {
     height: 25px;
     width: 25px;
     color: #CD8D6B;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 .edit-button-container > *:hover {
@@ -779,3 +781,58 @@ select > option {
 #status {
     -webkit-text-stroke: #000 0.5px;
 }
+
+.status-info-desc {
+    color: #AF4261;
+    font-size: 15px;
+    margin: 5px;
+}
+
+.modal-container-delete {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+  
+.modal-content-delete {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 400px;
+    width: 100%;
+}
+  
+.delete-btn-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+  
+.btn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 10px;
+}
+  
+.btn-confirm {
+    background-color: #AF4261;
+    color: #fff;
+}
+  
+.btn-cancel {
+    background-color: #939292;
+    color: #fff;
+}
+  
