--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -836,3 +836,30 @@ select > option {
     color: #fff;
 }
   
+.pg-heading-secondary {
+    color: #686868;
+    font-size: 30px;
+    text-align: center;
+    font-weight: 500;
+    margin-top: 10px;
+}
+
+.proj-sidebar {
+    height: 100vh;
+    width: 20%;
+    background-color: #CD8D6B;
+}
+
+.task-detail-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-body {
+    flex: 1;
+}
+
+.sidebar-heading {
+    text-align: center;
+    font-size: 30px;
+}
