--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -583,7 +583,7 @@ select > option {
 
 /* Project Detail Page styling */
 
-.project-container {
+.project-container, .task-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -597,7 +597,7 @@ select > option {
     font-size: 25px;
 }
 
-.project-info-container {
+.project-info-container, .task-info-container {
     width: 100%;
     /* min-height: 300px;
     max-height: 300px; */
@@ -606,20 +606,20 @@ select > option {
     display: flex;
 }
 
-.project-info {
+.project-info, .task-info {
     width: 60%;
     border: 1px solid black;
     display: flex;
     flex-direction: column;
 }
 
-.project-title {
+.project-title, .task-title {
     font-size: 30px;
     margin-top: 10px;
     margin-left: 15px;
 }
 
-.project-description {
+.project-description, .task-description {
     font-size: 20px;
     margin-top: -15px;
     margin-left: 15px;
@@ -629,7 +629,7 @@ select > option {
     flex: 1;
 }
 
-.proj-footer {
+.proj-footer, .task-footer {
     display: flex;
     justify-content: space-between;
     border-top: 2px solid black;
@@ -862,4 +862,50 @@ select > option {
 .sidebar-heading {
     text-align: center;
     font-size: 30px;
+}
+.sidebar-desc {
+    color: #3f3f3f;
+    font-size: 20px;
+    text-align: center;
+    margin: 10px;
+    margin-top: 20px;
+}
+
+.circular-container {
+    margin-top: 30px;
+}
+
+.circular-container > * {
+    height: 120px;
+    width: 120px;
+}
+
+.status-sidebar {
+    text-align: center;
+    font-size: 25px;
+}
+
+.status-sidebar-info {
+    margin: -30px auto 10px;
+    text-align: center;
+    font-size: 20px;
+    color: #985100;
+}
+
+.status-sidebar-info-desc {
+    text-align: center;
+    color: #985100;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.task-desc {
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
+    color: #3f3f3f;
+}
+
+.task-footer {
+    justify-content: space-around;
 }
