Completed the basic structure of task detail view. - Started working towards the functioanlity to add instructions to tasks. - Implemented the CRUD operations for instructions. (Not tested yet!)

--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -912,8 +912,8 @@ select > option {
 }
 
 .task-progress-indicator > * {
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 100px;
 }
 
 .task-actions-container {
@@ -966,4 +966,8 @@ select > option {
     font-family: "Archivo Black", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+.btn-container {
+    margin: 0 auto;
 }
