--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -846,7 +846,6 @@ select > option {
 }
 
 .proj-sidebar {
-    height: 100vh;
     width: 20%;
     background-color: #CD8D6B;
 }
@@ -970,4 +969,131 @@ select > option {
 
 .btn-container {
     margin: 0 auto;
+}
+
+.task-instructions-container {
+    margin: 20px 50px;
+    width: 90%;
+}
+
+.chat-container {
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 15px;
+    background-color: #ffca84;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.messages-container {
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.message {
+    margin-bottom: 15px;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 15px;
+    background-color: white;
+    width: 60%;
+    position: relative;
+    float: right;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.message-received {
+    float: left;
+}
+
+.message-header {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 20px;
+    border-bottom: 1px solid black;
+    padding-bottom: 5px;
+    font-style: italic;
+    font-family: 'Archivo Black', sans-serif;
+}
+
+.attachment {
+    margin: 10px 0;
+}
+
+.message p {
+    margin: 0;
+}
+
+.timestamp {
+    font-size: 12px;
+    color: #666;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+}
+
+.message-input-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.message-input-container textarea {
+    flex: 1;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #CD8D6B;
+    resize: none;
+    height: 20px;
+}
+
+.message-input-container textarea:focus {
+    outline: 1px solid #CD8D6B;
+}
+
+.message-input-container .attach-icon {
+    font-size: 35px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.message-input-container .send-button {
+    background-color: #159615;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    padding: 15px 20px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.message-input-container .send-button:hover {
+    background-color: #00760e;
+}
+
+.attached-file {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    flex-direction: column;
+    width: fit-content;
+}
+
+.file-icon {
+    font-size: 40px;
+    color: white;
+    margin: 10px;
+}
+
+.remove-file {
+    font-size: 20px;
+    display: flex;
+    justify-content: flex-end;
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: -10px;
+    cursor: pointer;
 }
