Added the functionality to view the list of members on the frontend. and Setted up django backend for sending emials

--- a/frontend/src/Components/components.css
+++ b/frontend/src/Components/components.css
@@ -1131,3 +1131,16 @@ select > option {
 .project-manager-email a:hover {
     color: #000000;
 }
+
+.member-table tr td, .member-table tr th {
+    padding: 15px;    
+}
+
+.member-table tr td {
+    background-color: #dbbc93;
+}
+
+.member-heading {
+    margin: 30px;
+    margin-top: 50px;
+}
